main core update

--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,8 @@
-BSC_RPC_URL=
-ETH_RPC_URL=
 CONNECTION_HOST=
 CONNECTION_USER=
 CONNECTION_PWD=
 CONNECTION_DB=
 BOT_TOKEN=
-SENTRY_URL= 
+SENTRY_URL=
+SECURITY_KEY=
+SECURITY_ALGORITHM=
