--- a/package.json
+++ b/package.json
@@ -6,20 +6,24 @@
   "author": "Masandri",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
-    "dev": "ts-node src/app.ts"
+    "build": "tsc --outDir dist",
+    "start": "ts-node src/app.ts"
   },
   "dependencies": {
     "@sentry/node": "^6.13.2",
     "@sentry/tracing": "^6.13.2",
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "knex": "^0.95.11",
     "mysql": "^2.18.1",
-    "telegraf": "^4.4.2",
+    "node-telegram-bot-api": "^0.54.0",
     "web3": "^1.6.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
+    "ts-node": "^10.7.0",
+    "@types/node-telegram-bot-api": "^0.53.1",
     "typescript": "^4.1.3"
   }
 }
