--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "ES6",
     "module": "commonjs",
     "strict": true,
     "esModuleInterop": true,
@@ -11,7 +11,8 @@
     "emitDecoratorMetadata": true,
     "rootDir": "src",
     "types": [],
-    "lib": ["ES6", "DOM"],
+    "lib": ["ES6"],
+    "outDir": "dist",
   },
   "include": [
     "src/"
