--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sentry/node": "^6.13.2",
     "@sentry/tracing": "^6.13.2",
     "@types/bcryptjs": "^2.4.2",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "knex": "^0.95.11",
@@ -22,8 +23,8 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
-    "ts-node": "^10.7.0",
     "@types/node-telegram-bot-api": "^0.53.1",
+    "ts-node": "^10.7.0",
     "typescript": "^4.1.3"
   }
 }
