--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/bcryptjs": "^2.4.2",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
+    "bignumber.js": "^9.0.2",
     "dotenv": "^10.0.0",
     "knex": "^0.95.11",
     "mysql": "^2.18.1",
